<resources>
    <string name="app_name">Inventory App Stage Two</string>
    <string name="empty_TV">Add a product</string>
    <string name="action_delete_all_products">Delete all items</string>
    <string name="question_delete_all">Delete All items in database?</string>
    <string name="add_product">Add New Product</string>
    <string name="product_editor">Product Editor</string>
    <string name="edit_product">Edit Product</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_allegro">Allegro</string>
    <string name="supplier_ebay">Ebay</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="product_view">Product Details</string>
    <string name="delete_message">Delete this Product?</string>
    <string name="quantity_change_msg">Quantity was change</string>
    <string name="quantity_finished_msg">Products gone</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone">Supplier Phone Number</string>
    <string name="action_save">Save</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Update failed</string>
    <string name="update_successful">Update successfull</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="product_name_requires">Product name requires</string>
    <string name="price_requires">Product price requires</string>
    <string name="quantity_requires">Product quantity requires</string>
    <string name="supplier_name_requires">Supplier Name requires </string>
    <string name="supplier_phone_requires">Supplier Phone requires</string>
    <string name="deleted_all_products_message">rows deleted from product table</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
